# directed-spectrum

./: .gitignore  LICENSE.txt  README.md  ds.py  first_test.py  setup.cfg
dir_spec/: ds.py
test/: test_data.npz  test_simdata.py
