[metadata]
name = directed-spectrum
version = 0.2.5+dev
author = Neil Gallagher
description = Estimate the directed spectrum from multi-channel timeseries data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
            Programming Language :: Python :: 3
            License :: OSI Approved :: BSD License
            Operating System :: OS Independent

[options]
packages = find:

